Fixed history graph overflow

--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -11,8 +11,9 @@ body {
 .lineChart {
   display: flex;
   align-items: center;
-  max-width: 200px;
-  max-height: 200px;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
 }
 
 .container {
@@ -212,6 +213,10 @@ nav {
   border-width: 1px;
   border-color: #dcdcdc;
   min-height: 350px;
+  max-height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @media only screen and (max-width: 1239px) {
@@ -335,6 +340,9 @@ nav {
     max-height: 170px;
     min-width: 170px;
     min-height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #turbidity {
@@ -350,6 +358,9 @@ nav {
     max-height: 170px;
     min-width: 170px;
     min-height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #ph {
@@ -365,6 +376,9 @@ nav {
     max-height: 170px;
     min-width: 170px;
     min-height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #ec {
@@ -380,6 +394,9 @@ nav {
     max-height: 170px;
     min-width: 170px;
     min-height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #temp {
@@ -395,6 +412,9 @@ nav {
     max-height: 170px;
     min-width: 170px;
     min-height: 170px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   #history {
@@ -408,5 +428,8 @@ nav {
     border-color: #dcdcdc;
     max-width: 1015px;
     max-height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
